Bug Fix: Footer makes webpage misaligned

--- a/styles.css
+++ b/styles.css
@@ -105,12 +105,6 @@ img {
     margin-left: 1rem;
 }
 
-#footer {
-    display: flex;
-    position: fixed;
-    bottom: 0;
-}
-
 a {
   text-decoration: none;
   color: inherit;
@@ -123,12 +117,4 @@ a:visited {
 #githubIcon {
     height: 1rem;
     margin-left: 5px;
-}
-
-footer {
-    
-    display: flex;
-    margin-top: -.9rem;
-    align-items: center;
-
 }
